after login request complete

--- a/MyNoteVir/SourceCode/mysite/mytasks/templates/mytasks/create_account.html
+++ b/MyNoteVir/SourceCode/mysite/mytasks/templates/mytasks/create_account.html
@@ -19,7 +19,7 @@
                 <input class=login_element type='text' name='uname' placeholder='Enter Username'required>
                 <label class=login_element>User Password:</label>
                 <input class=login_element type='password' name='pwd' placeholder='Enter Password' required>
-                <input class=button_element type='submit' value='Login'>
+                <input class=button_element type='submit' value='Create Account'>
 		<a href={% url 'login' %} class=page_url>Return to login page</a>
 	</form>
 </div>
